[package]
name = "osmia"
version = "2.10.1"
edition = "2021"
repository = "https://github.com/jkutkut/osmia"
description = "Templating in rust"
license = "gpl-3.0-or-later"
authors = ["Jkutkut"]

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"

[dev-dependencies]
macro_test = { git = "https://github.com/jkutkut/rust-macro-test" }
