[package]
name = "osmia"
version = "2.11.6"
edition = "2021"
repository = "https://github.com/jkutkut/osmia"
description = "Templating in rust"
license = "gpl-3.0-or-later"
authors = ["Jkutkut"]

[features]
default = []

dumper = []
detailed-dumper = []

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"

[dev-dependencies]
macro_test = { git = "https://github.com/jkutkut/rust-macro-test", tag = "v1.3.0" }
